homepage desktop completed

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,78 +1,136 @@
-<footer id="footer" class="footer bg-overlay">
-    <div class="footer-main">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-12 footer-widget footer-about">
-                    <h3 class="widget-title">About Us</h3>
-                    <img class="footer-logo" src="images/footer-logo.png" alt="" />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
-                        labore et dolore magna aliqua.</p>
-                    <div class="footer-social">
-                        <ul>
-                            <li><a href="https://facebook.com/themefisher"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://twitter.com/themefisher"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://instagram.com/themefisher"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="https://github.com/themefisher"><i class="fa fa-github"></i></a></li>
-                        </ul>
-                    </div><!-- Footer social end -->
-                </div><!-- Col end -->
+<footer id="footer" class="footer">
+  <div class="footer-main">
+    <div class="container">
+        <div class=" text-center call-to-action-text">
+            <h2 class="section-sub-title">Join Millions of Learners</h2>
+           <a href="" class="btn btn-primary">Join Now</a>
+        </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3 col-sm-12 footer-widget footer-about">
+          <h3 class="widget-title">About Us</h3>
+          <!-- <img class="footer-logo" src="assets/images/footer-logo.png" alt="" /> -->
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor inci done idunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <!-- Col end -->
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-md-3 col-sm-12 footer-widget">
+                <h3 class="widget-title">ECOSYSTEM</h3>
+                <ul class="list-arrow">
+                  <li><a href="service-single.html">Mentors</a></li>
+                  <li><a href="service-single.html">Students</a></li>
+                  <li><a href="service-single.html">Mobile App</a></li>
+                  <li><a href="service-single.html">Top Courses</a></li>
+                  <li><a href="service-single.html">Developers & API</a></li>
+                </ul>
+              </div>
+            <!-- Col end -->
 
-                <div class="col-md-4 col-sm-12 footer-widget">
-                    <h3 class="widget-title">Working Hours</h3>
-                    <div class="working-hours">
-                        We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency, with our
-                        Hotline and Contact form.
-                        <br><br> Monday - Friday: <span class="text-right">10:00 - 16:00 </span>
-                        <br> Saturday: <span class="text-right">12:00 - 15:00</span>
-                        <br> Sunday and holidays: <span class="text-right">09:00 - 12:00</span>
-                    </div>
-                </div><!-- Col end -->
-
-                <div class="col-md-4 col-sm-12 footer-widget">
-                    <h3 class="widget-title">Services</h3>
-                    <ul class="list-arrow">
-                        <li><a href="service-single.html">Pre-Construction</a></li>
-                        <li><a href="service-single.html">General Contracting</a></li>
-                        <li><a href="service-single.html">Construction Management</a></li>
-                        <li><a href="service-single.html">Design and Build</a></li>
-                        <li><a href="service-single.html">Self-Perform Construction</a></li>
-                    </ul>
-                </div><!-- Col end -->
-
-
-            </div><!-- Row end -->
-        </div><!-- Container end -->
-    </div><!-- Footer main end -->
-
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <div class="copyright-info">
-                        <span>Copyright ©<a href="/">KnockitOff</a></span>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6">
-                    <div class="footer-menu">
-                        <ul class="nav unstyled">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="team.html">Our people</a></li>
-                            <li><a href="faq.html">Faq</a></li>
-                            <li><a href="news-left-sidebar.html">Blog</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div><!-- Row end -->
-
-            <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top affix">
-                <button class="btn btn-primary" title="Back to Top">
-                    <i class="fa fa-angle-double-up"></i>
-                </button>
+            <div class="col-md-3 col-sm-12 footer-widget">
+              <h3 class="widget-title">STORE</h3>
+              <ul class="list-arrow">
+                <li><a href="service-single.html">Explore</a></li>
+                <li><a href="service-single.html">Buy Courses</a></li>
+                <li><a href="service-single.html">Best Selling</a></li>
+                <li><a href="service-single.html">Categories</a></li>
+                <li><a href="service-single.html">Become a Seller</a></li>
+                
+              </ul>
             </div>
+            <!-- Col end -->
 
-        </div><!-- Container end -->
-    </div><!-- Copyright end -->
+            <div class="col-md-3 col-sm-12 footer-widget">
+                <h3 class="widget-title">COMMUNITY</h3>
+                <ul class="list-arrow">
+                  <li><a href="service-single.html">Explore</a></li>
+                  <li><a href="service-single.html">Help Center</a></li>
+                  <li><a href="service-single.html">Education</a></li>
+                  <li><a href="service-single.html">Museums</a></li>
+                  <li><a href="service-single.html">Blog</a></li>
+                  <li><a href="service-single.html">Forum</a></li>
+                </ul>
+              </div>
+              <!-- Col end -->
 
-</footer><!-- Footer end -->
+              <div class="col-md-3 col-sm-12 footer-widget">
+                <h3 class="widget-title">ABOUT</h3>
+                <ul class="list-arrow">
+                  <li><a href="service-single.html">Company</a></li>
+                  <li><a href="service-single.html">Careers</a></li>
+                  <li><a href="service-single.html">Team</a></li>
+                  <li><a href="service-single.html">Features</a></li>
+                </ul>
+              </div>
+              <!-- Col end -->
+          </div>
+        </div>
+      </div>
+      <!-- Row end -->
+    </div>
+    <!-- Container end -->
+  </div>
+  <!-- Footer main end -->
+
+  <div class="copyright">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-3">
+          <div class="copyright-info">
+            <span>
+              &copy; 2020 - <a href="/" class="brand-link">Knock It Off</a> - All Rights
+              reserved</span
+            >
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-4">
+          <div class="footer-menu">
+            <ul class="nav unstyled">
+              <li><a href="about.html">Terms of service</a></li>
+              <li><a href="team.html">Refund policy</a></li>
+              <li><a href="faq.html">Privacy policy</a></li>
+              <li><a href="news-left-sidebar.html">Sitemap</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-sm-5 text-right">
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="https://facebook.com/themefisher"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/themefisher"
+                  ><i class="fa fa-twitter"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://instagram.com/themefisher"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://github.com/themefisher"
+                  ><i class="fa fa-github"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <!-- Footer social end -->
+        </div>
+      </div>
+      <!-- Row end -->
+    </div>
+    <!-- Container end -->
+  </div>
+  <!-- Copyright end -->
+</footer>
+<!-- Footer end -->
