--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
-<div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top affix">
+<!-- <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top affix">
   <button class="btn btn-primary" title="Back to Top">
       <i class="fa fa-angle-double-up"></i>
   </button>
-</div>
+</div> -->
 <app-footer></app-footer>
