--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
                     >Explore <i class="fa fa-angle-down"></i
                   ></a>
                   <ul class="dropdown-menu custom-dropdown" role="menu">
-                    <div class="row no-gutters">
+                    <div class="row">
                       <div class="col-md-4">
                         <ul class="dropdown-section bg-gradient-blue">
                           <li class="dropdown-item">
@@ -331,6 +331,11 @@
                     <li><a href="404.html">eCommerce</a></li>
                   </ul>
                 </li>
+                <div class="mobile-menu nav navbar-nav">
+                  <li><a href="contact.html">Login</a></li>
+                  <li><a href="contact.html">Signup</a></li>
+                </div>
+               
 
                 <!--                               
                                 <li><a href="contact.html">Login</a></li>
@@ -345,7 +350,7 @@
           <div class="site-nav-inner pull-right right-menu">
             <div class="collapse navbar-collapse navbar-responsive-collapse">
               <ul class="nav navbar-nav">
-                <li>
+                <li class="shopping-cart">
                   <a href="contact.html"
                     ><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                   </a>
