--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,14 @@
 <footer id="footer" class="footer">
   <div class="footer-main">
-    <div class="container">
+    <div class="container-fluid">
         <div class=" text-center call-to-action-text">
             <h2 class="section-sub-title">Join Millions of Learners</h2>
            <a href="" class="btn btn-primary">Join Now</a>
         </div>
     </div>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3 col-sm-12 footer-widget footer-about">
+      <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-12 col-sm-12 footer-widget footer-about">
           <h3 class="widget-title">About Us</h3>
           <!-- <img class="footer-logo" src="assets/images/footer-logo.png" alt="" /> -->
           <p>
@@ -17,7 +17,7 @@
           </p>
         </div>
         <!-- Col end -->
-        <div class="col-md-9">
+        <div class="col-lg-9 col-md-11">
           <div class="row">
             <div class="col-md-3 col-sm-12 footer-widget">
                 <h3 class="widget-title">ECOSYSTEM</h3>
@@ -79,7 +79,7 @@
   <div class="copyright">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12 col-sm-3">
+        <div class="col-xs-12 col-md-4 col-lg-3">
           <div class="copyright-info">
             <span>
               &copy; 2020 - <a href="/" class="brand-link">Knock It Off</a> - All Rights
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-xs-12 col-md-8 col-lg-4">
           <div class="footer-menu">
             <ul class="nav unstyled">
               <li><a href="about.html">Terms of service</a></li>
@@ -99,7 +99,7 @@
           </div>
         </div>
 
-        <div class="col-sm-5 text-right">
+        <div class="col-md-12 col-lg-5">
           <div class="footer-social">
             <ul>
               <li>
